objects/InterestOnOpportunityNotif__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Estimated amount of this interest.</description>
        <inlineHelpText>Estimated amount of this interest.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <inlineHelpText>Exposed to Customer</inlineHelpText>
        <label>Interest *</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
                <value>
                    <fullName>Cooling</fullName>
                </value>
                <value>
                    <fullName>Racks &amp; Enclosures</fullName>
                </value>
                <value>
                    <fullName>3 phase power</fullName>
                </value>
                <value>
                    <fullName>1 phase power</fullName>
                </value>
                <value>
                    <fullName>Other HW</fullName>
                </value>
                <value>
                    <fullName>Other Service</fullName>
                </value>
                <value>
                    <fullName>Spare Parts</fullName>
                </value>
                <value>
                    <fullName>MV Equipment</fullName>
                </value>
                <value>
                    <fullName>Switch Gear</fullName>
                </value>
                <value>
                    <fullName>Building Services</fullName>
                </value>
                <value>
                    <fullName>Solar Products</fullName>
                </value>
                <value>
                    <fullName>Solar Services</fullName>
                </value>
                <value>
                    <fullName>Systems (legacy Invensys) Services</fullName>
                </value>
                <value>
                    <fullName>Plant Solutions Services</fullName>
                </value>
                <value>
                    <fullName>Systems (legacy Invensys) HW/SW</fullName>
                </value>
                <value>
                    <fullName>Plant Solutions HW/SW</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Batt. Repl. VRLA &amp; Li Ion</fullName>
                </value>
                <value>
                    <fullName>MBRS</fullName>
                </value>
                <value>
                    <fullName>Spare Sales</fullName>
                </value>
                <value>
                    <fullName>RefreshUPS -Cooling Mod</fullName>
                </value>
                <value>
                    <fullName>MPRS</fullName>
                </value>
                <value>
                    <fullName>Asset Advisor</fullName>
                </value>
                <value>
                    <fullName>On demand</fullName>
                </value>
                <value>
                    <fullName>LV Modernization &amp; Ecofit</fullName>
                </value>
                <value>
                    <fullName>MV Modernization &amp; Ecofit</fullName>
                </value>
                <value>
                    <fullName>Maintenance &amp; Diag for next intervention</fullName>
                </value>
                <value>
                    <fullName>Maintenance &amp; Diag for urgent repair</fullName>
                </value>
                <value>
                    <fullName>Asset Advisor &amp; Connect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leading_Business_BU__c</fullName>
        <label>Business (BU)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityNotification__c</fullName>
        <label>Opportunity Notification</label>
        <referenceTo>OpportunityNotification__c</referenceTo>
        <relationshipName>Interests_On_Opportunity_Notif</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Exposed to Customer</inlineHelpText>
        <label>Type *</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Leading_Business_BU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Service (IT)</fullName>
                    <label>Service (Secure Power)</label>
                </value>
                <value>
                    <fullName>Product (IT)</fullName>
                    <label>Product (Secure Power)</label>
                </value>
                <value>
                    <fullName>Service (Industry)</fullName>
                    <label>Service (Industrial Automation)</label>
                </value>
                <value>
                    <fullName>Service (Solar)</fullName>
                </value>
                <value>
                    <fullName>Product (Solar)</fullName>
                </value>
                <value>
                    <fullName>Service (Building)</fullName>
                    <label>Service (Digital Energy)</label>
                </value>
                <value>
                    <fullName>Service (Energy)</fullName>
                    <label>Service (Power Systems)</label>
                </value>
                <value>
                    <fullName>Product (Energy)</fullName>
                    <label>Product (Power Systems)</label>
                </value>
                <value>
                    <fullName>Product (Industry)</fullName>
                    <label>Product (Industrial Automation)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interest</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interest On Opportunity Notif Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>